# metrics

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPERS.md  INSTALL.md  README.md  backfill.py  docker-compose.yaml  dotenv-sample  justfile  output_checking_reactions.py  pyproject.toml  remove-all-measurements.py  requirements.dev.in  requirements.dev.txt  requirements.prod.in  requirements.prod.txt  setup-timescaledb-tables.py  streamlit-app.py
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot-prs.yml  grafana.yml  main.yml  update-dependencies.yml
docker/: Dockerfile
docs/adr/: 0000-record-architecture-decisions.md  0001-use-grafana-for-dashboards.md  0002-use-timescale-for-metrics  0003-use-sentry-cron-monitoring.md
docs/plans/: 2026-02-23-control-chart-cleanup-implementation.md  2026-02-23-control-chart-weekly-design.md  2026-02-23-control-chart-weekly-implementation.md  2026-02-23-weekly-bucket-histogram-implementation.md  2026-02-23-working-days-implementation.md
grafana/: Dockerfile  README.md  docker-compose.yml  justfile
influxdb/: README.md
metrics/: app.json  cli.py  influxdb.py  logs.py  timescaledb.py
metrics/github/: api.py  backfill.py  cli.py  client.py  commands.py  github.py  issue_reactions.py  (+6 more)
queries/: current-old-prs-content.sql  current-old-prs-dependabot.sql  current-old-prs-humans.sql  current-open-issues.sql  old-prs-content.sql  old-prs-dependabot.sql  old-prs-humans.sql  open-issues-by-author.sql  open-issues.sql  throughput-dependabot.sql  throughput-humals.sql
tests/: conftest.py
timescaledb/: Dockerfile  init.sql
(+37 files in other folders)
