[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "wheel"]

[project]
name = "metrics"
description = "Internal metrics tooling for the Bennett Institute of Applied Data Science at Oxford"
readme = "README.md"
authors = [{name = "Bennett Institute", email = "tech@ebmdatalab.org"}]
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
requires-python = ">=3.11"
dependencies = [
  "click",
  "github-to-sqlite",
  "requests",
  "psycopg[binary]",
  "slack-bolt",
  "structlog",
]
dynamic = ["version"]

[project.scripts]
add_job = "metrics.cli:cli"

[project.urls]
Home = "https://bennett.ox.ac.uk"
Source = "https://github.com/opensafely-core/metrics/"

[tool.coverage.run]
branch = true
dynamic_context = "test_function"
omit = [
  ".venv/*",
]

[tool.coverage.report]
fail_under = 100
skip_covered = true
show_missing = true

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]

[tool.ruff]
line-length = 88
exclude = [
  ".direnv",
  ".git",
  ".github",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".venv",
  "__pycache__",
  "docker",
  "htmlcov",
  "venv",
]
extend-select = [
  "A",  # flake8-builtins
  "I",  # isort
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
extend-ignore = [
  "E501",
  "E731",
]

[tool.ruff.isort]
lines-after-imports = 2


[tool.setuptools.packages.find]
include = ["metrics*"]
